--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "next": "11.0.1",
     "react": "17.0.2",
     "react-bootstrap": "^1.6.1",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "react-nl2br": "^1.0.2"
   },
   "devDependencies": {
     "axios": "^0.21.1"
